loading icon with fontawesome

--- a/demo.html
+++ b/demo.html
@@ -4,8 +4,7 @@
 <head>
 	<meta charset='utf-8' />
 	<title>jQuery elevateZoom Demo</title>
-	<script src='jquery-1.8.3.min.js'></script>
-	<script src='jquery.elevatezoom.js'></script>
+	<link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css" />
 </head>
 
 <body>
@@ -20,6 +19,8 @@
 		<a href="#" data-image="images/small/image4.png" data-zoom-image="images/large/image4.jpg"> <img id="img_01" src="images/thumb/image4.jpg" /> </a>
 	</div>
 	see more examples online <a href="http://www.elevateweb.co.uk/image-zoom/examples">http://www.elevateweb.co.uk/image-zoom/examples</a>
+	<script src='/bower_components/jquery/dist/jquery.min.js'></script>
+	<script src='jquery.elevatezoom.js'></script>
 	<script>
 	$('#zoom_01').elevateZoom({
 		zoomType: "inner",
