loadingIcon with fontawesome

--- a/demo.html
+++ b/demo.html
@@ -20,7 +20,7 @@
 	</div>
 	see more examples online <a href="http://www.elevateweb.co.uk/image-zoom/examples">http://www.elevateweb.co.uk/image-zoom/examples</a>
 	<script src='/bower_components/jquery/dist/jquery.min.js'></script>
-	<script src='jquery.elevatezoom.js'></script>
+	<script src='/src/jquery.elevatezoom.js'></script>
 	<script>
 	$('#zoom_01').elevateZoom({
 		zoomType: "inner",
@@ -34,7 +34,7 @@
 		cursor: 'pointer',
 		galleryActiveClass: 'active',
 		imageCrossfade: true,
-		loadingIcon: 'images/spiffygif_32x32.gif'
+		loadingIcon: '<i class="fa fa-refresh fa-spin fa-fw fa-3x">'
 	}); 
 	</script>
 </body>
